--- a/File/Surge/zCloud.conf
+++ b/File/Surge/zCloud.conf
@@ -104,13 +104,27 @@ DOMAIN,m.game.weibo.cn,REJECT
 DOMAIN-SUFFIX,gw5.push.mcp.weibo.cn,REJECT
 DOMAIN-SUFFIX,u1.img.mobile.sina.cn,REJECT
 DOMAIN-SUFFIX,beacon.sina.com.cn,REJECT
-DOMAIN-SUFFIX,weibo.cn,DIRECT
-DOMAIN-SUFFIX,sina.cn,DIRECT
-DOMAIN-SUFFIX,weibo.com,DIRECT
 #sohu
 DOMAIN,mmg.aty.sohu.com,REJECT
 DOMAIN-SUFFIX,aty.sohu.com,REJECT
-DOMAIN-SUFFIX,sohu.com,DIRECT
+#youtube by lhie1
+DOMAIN-SUFFIX,ehg-youtube.hitbox.com,REJECT
+DOMAIN-SUFFIX,gcdn.2mdn.net,REJECT
+DOMAIN-SUFFIX,s.youtube.com,REJECT
+DOMAIN-SUFFIX,s2.youtube.com,REJECT
+DOMAIN-SUFFIX,ssl-youtube.2cnt.net,REJECT
+DOMAIN-SUFFIX,youtube.112.2o7.net,REJECT
+DOMAIN-SUFFIX,youtube.2cnt.net,REJECT
+DOMAIN-SUFFIX,ads.youtube.com,REJECT
+DOMAIN-SUFFIX,azabu-u.ac.jp,REJECT
+DOMAIN-SUFFIX,couchcoaster.jp,REJECT
+DOMAIN-SUFFIX,crt.comodoca.com,REJECT
+DOMAIN-SUFFIX,delivery.dmkt-sp.jp,REJECT
+DOMAIN-SUFFIX,files.adform.net,REJECT
+DOMAIN-SUFFIX,m-78.jp,REJECT
+DOMAIN-SUFFIX,nichibenren.or.jp,REJECT
+DOMAIN-SUFFIX,nicorette.co.kr,REJECT
+DOMAIN-SUFFIX,shizen-no-megumi.com,REJECT
 ##
 DOMAIN-SUFFIX,apple.com,DIRECT
 DOMAIN-SUFFIX,cdn-apple.com,DIRECT
