--- a/File/Shadowrocket/zCloud_Global.conf
+++ b/File/Shadowrocket/zCloud_Global.conf
@@ -127,6 +127,31 @@ DOMAIN-SUFFIX,m-78.jp,REJECT
 DOMAIN-SUFFIX,nichibenren.or.jp,REJECT
 DOMAIN-SUFFIX,nicorette.co.kr,REJECT
 DOMAIN-SUFFIX,shizen-no-megumi.com,REJECT
+#dns pollution
+DOMAIN,accounts.google.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,appspot.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,cdninstagram.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,facebook.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,fb.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,fb.me,Proxy,force-remote-dns
+DOMAIN-SUFFIX,fbcdn.net,Proxy,force-remote-dns
+DOMAIN-SUFFIX,gmail.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,googleapis.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,instagram.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,scdn.co,Proxy,force-remote-dns
+DOMAIN-SUFFIX,t.co,Proxy,force-remote-dns
+DOMAIN-SUFFIX,twimg.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,twitpic.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,twitter.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,youtube.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,youtube-nocookie.com,Proxy
+DOMAIN-KEYWORD,aka,Proxy,force-remote-dns
+DOMAIN-KEYWORD,appledaily,Proxy,force-remote-dns
+DOMAIN-KEYWORD,blogspot,Proxy,force-remote-dns
+DOMAIN-KEYWORD,dropbox,Proxy,force-remote-dns
+DOMAIN-KEYWORD,google,Proxy,force-remote-dns
+DOMAIN-KEYWORD,spotify,Proxy,force-remote-dns
+DOMAIN-KEYWORD,telegram,Proxy,force-remote-dns
 ##
 DOMAIN,alexa.links.cn,REJECT
 DOMAIN,api.amplitude.com,REJECT
