--- a/File/Shadowrocket/zCloud_Global.conf
+++ b/File/Shadowrocket/zCloud_Global.conf
@@ -22,44 +22,44 @@ newloc.map.n.shifen.com = ::
 
 [URL Rewrite]
 #Youku by lhie1
-^.+api.appsdk.soku.com/[bg|tag]/r _reject
-^.+api.mobile.youku.com/adv/ _reject
-^.+api.mobile.youku.com/layout/search/hot/word _reject
-^.+d.m6.cms.mobile.youku.com/player/domain_name? http://burpsuite.applinzi.com/Request/ header
-^.+hd.api.mobile.youku.com/common/v3/hudong/new _reject
-^.+hd.mobile.youku.com/common/v3/hudong/new _reject
+^.+api.appsdk.soku.com/[bg|tag]/r reject
+^.+api.mobile.youku.com/adv/ reject
+^.+api.mobile.youku.com/layout/search/hot/word reject
+^.+d.m6.cms.mobile.youku.com/player/domainname? http://burpsuite.applinzi.com/Request/ header
+^.+hd.api.mobile.youku.com/common/v3/hudong/new reject
+^.+hd.mobile.youku.com/common/v3/hudong/new reject
 ^.+i-play.mobile.youku.com/common/v5/play? http://burpsuite.applinzi.com/Request/ header
-^.+m.youku.com/video/libs/iwt.js _reject
-^.+r.l.youku.com/rec_at_click _reject
+^.+m.youku.com/video/libs/iwt.js reject
+^.+r.l.youku.com/recatclick reject
 #youku
-^.+api.mobile.youku.com/adv/* _reject
-^.+home.mobile.youku.com/laout/* _reject
+^.+api.mobile.youku.com/adv/* reject
+^.+home.mobile.youku.com/laout/* reject
 #google
 ^.+google.com.* http://www.google.com.hk header
 #lianbi
-^.+www.lianbijr.com/adPage/* _reject
+^.+www.lianbijr.com/adPage/* reject
 #iqiyi
-^.+iface.iqiyi.com/api/getNewAdInfo* _reject
-^.+pic?\d{1}.qiyipic.com/common/?\d{8}/?([a-z0-9]{32}).jpg _reject
+^.+iface.iqiyi.com/api/getNewAdInfo* reject
+^.+pic?\d{1}.qiyipic.com/common/?\d{8}/?([a-z0-9]{32}).jpg reject
 #sohu
-^.+photocdn.sohu.com/tvmobilemvms/* _reject
+^.+photocdn.sohu.com/tvmobilemvms/* reject
 #sina
-^.+dp.im.weibo.cn/entrance _reject
-^.+wbapp.mobile.sina.cn/wbapplua/* _reject
-^.+sdkapp.mobile.sina.cn/interface/sdk/[sdkad.php|actionad.php] _reject
-^.+sdkapp.mobile.sina.cn/interface/sdk/actionad.php _reject
-^.+u?\d{1}.img.mobile.sina.cn/public/files/image/750x120_img* _reject
+^.+dp.im.weibo.cn/entrance reject
+^.+wbapp.mobile.sina.cn/wbapplua/* reject
+^.+sdkapp.mobile.sina.cn/interface/sdk/[sdkad.php|actionad.php] reject
+^.+sdkapp.mobile.sina.cn/interface/sdk/actionad.php reject
+^.+u?\d{1}.img.mobile.sina.cn/public/files/image/750x120img* reject
 #lemon
-^.+api.lemon95.com/V2/Media/Users/GetChannel* _reject
-^.+tupian.lemon95.com:(\d{3,5})/Pictures/VediosAD/* _reject
+^.+api.lemon95.com/V2/Media/Users/GetChannel* reject
+^.+tupian.lemon95.com:(\d{3,5})/Pictures/VediosAD/* reject
 #163 music
-^.+p[3|4].music.126.net/+/\d.jpg?res=\d{8} _reject
-^.+img1.126.net/channel8/.+ _reject
+^.+p[3|4].music.126.net/+/\d.jpg?res=\d{8} reject
+^.+img1.126.net/channel8/.+ reject
 #Cbox
-^.+p1.img.cctvpic.com/fmspic/pd/+ _reject
-^.+cntv.cn/nettv/adp/online/adlist_ios.js _reject
+^.+p1.img.cctvpic.com/fmspic/pd/+ reject
+^.+cntv.cn/nettv/adp/online/adlistios.js reject
 #Mybus
-^.+\d{4}.mygolbs.com:\d{4}/imgs/\d{13}.png _reject
+^.+\d{4}.mygolbs.com:\d{4}/imgs/\d{13}.png reject
 
 [Rule]
 #lemon
