--- a/File/Surge/zCloud.conf
+++ b/File/Surge/zCloud.conf
@@ -38,7 +38,7 @@ Auto test Group = url-test,xiaohua,zaihua,tokyo 1,tokyo 2,tokyo 3,tokyo 4,tokyo 
 ^.+www.lianbijr.com/adPage/* _reject
 #iqiyi
 ^.+iface.iqiyi.com/api/getNewAdInfo* _reject
-^.+pic?\d{1}.qiyipic.com/common/?\d{8}/?([a-z0-9]{32}).jpg _reject
+^.+pic?\d{1}.qiyipic.com/common/?\d{8}/?([a-z0-9]{32}).[jpg|gif] _reject
 #sohu
 ^.+photocdn.sohu.com/tvmobilemvms/* _reject
 #sina
