--- a/File/Shadowrocket/zCloud_Global.conf
+++ b/File/Shadowrocket/zCloud_Global.conf
@@ -70,12 +70,17 @@ DOMAIN,ad.api.3g.youku.com,REJECT
 #iqiyi
 DOMAIN-SUFFIX,qiyi.com,DIRECT
 DOMAIN-SUFFIX,iqiyi.com,DIRECT
+#iqy_qzdx
 IP-CIDR,112.17.1.75/32,REJECT,no-resolve
 IP-CIDR,112.17.1.76/32,REJECT,no-resolve
 IP-CIDR,112.17.1.193/32,REJECT,no-resolve
 IP-CIDR,112.17.1.194/32,REJECT,no-resolve
 IP-CIDR,112.17.1.195/32,REJECT,no-resolve
 IP-CIDR,112.17.1.196/32,REJECT,no-resolve
+#iqy_xmyd
+IP-CIDR,183.250.178.84/32,REJECT,no-resolve
+IP-CIDR,183.250.178.85/32,REJECT,no-resolve
+IP-CIDR,183.250.178.86/32,REJECT,no-resolve
 #hunantv
 DOMAIN,x.da.hunantv.com,REJECT
 DOMAIN,y.da.hunantv.com,REJECT
