--- a/File/Shadowrocket/zCloud_Global.conf
+++ b/File/Shadowrocket/zCloud_Global.conf
@@ -46,7 +46,7 @@ newloc.map.n.shifen.com = ::
 #sina
 ^.+dp.im.weibo.cn/entrance reject
 ^.+wbapp.mobile.sina.cn/wbapplua/* reject
-^.+sdkapp.mobile.sina.cn/interface/sdk/[sdkad.php|actionad.php] reject
+^.+sdkapp.mobile.sina.cn/interface/sdk/[sdkad\.php|actionad\.php] reject
 ^.+sdkapp.mobile.sina.cn/interface/sdk/actionad.php reject
 ^.+u?\d{1}.img.mobile.sina.cn/public/files/image/750x120img* reject
 #lemon
