--- a/File/Surge/zCloud.conf
+++ b/File/Surge/zCloud.conf
@@ -44,7 +44,7 @@ Auto test Group = url-test,xiaohua,zaihua,tokyo 1,tokyo 2,tokyo 3,tokyo 4,tokyo 
 #sina
 ^.+dp.im.weibo.cn/entrance _reject
 ^.+wbapp.mobile.sina.cn/wbapplua/* _reject
-^.+sdkapp.mobile.sina.cn/interface/sdk/[sdkad.php|actionad.php] _reject
+^.+sdkapp.mobile.sina.cn/interface/sdk/[sdkad\.php|actionad\.php] _reject
 ^.+sdkapp.mobile.sina.cn/interface/sdk/actionad.php _reject
 ^.+u?\d{1}.img.mobile.sina.cn/public/files/image/750x120_img* _reject
 #lemon
@@ -68,12 +68,17 @@ DOMAIN,ad.api.3g.youku.com,REJECT
 #iqiyi
 DOMAIN-SUFFIX,qiyi.com,DIRECT
 DOMAIN-SUFFIX,iqiyi.com,DIRECT
+#iqy_qzdx
 IP-CIDR,112.17.1.75/32,REJECT,no-resolve
 IP-CIDR,112.17.1.76/32,REJECT,no-resolve
 IP-CIDR,112.17.1.193/32,REJECT,no-resolve
 IP-CIDR,112.17.1.194/32,REJECT,no-resolve
 IP-CIDR,112.17.1.195/32,REJECT,no-resolve
 IP-CIDR,112.17.1.196/32,REJECT,no-resolve
+#iqy_xmyd
+IP-CIDR,183.250.178.84/32,REJECT,no-resolve
+IP-CIDR,183.250.178.85/32,REJECT,no-resolve
+IP-CIDR,183.250.178.86/32,REJECT,no-resolve
 #hunantv
 DOMAIN,x.da.hunantv.com,REJECT
 DOMAIN,y.da.hunantv.com,REJECT
