--- a/File/Surge/zCloud.conf
+++ b/File/Surge/zCloud.conf
@@ -44,7 +44,7 @@ Auto test Group = url-test,xiaohua,zaihua,tokyo 1,tokyo 2,tokyo 3,tokyo 4,tokyo 
 #sina
 ^.+dp.im.weibo.cn/entrance _reject
 ^.+wbapp.mobile.sina.cn/wbapplua/* _reject
-^.+sdkapp.mobile.sina.cn/interface/sdk/[sdkad\.php|actionad\.php] _reject
+^.+sdkapp.mobile.sina.cn/interface/sdk/[sdkad|actionad].php _reject
 ^.+sdkapp.mobile.sina.cn/interface/sdk/actionad.php _reject
 ^.+u?\d{1}.img.mobile.sina.cn/public/files/image/750x120_img* _reject
 #lemon
