--- a/File/Surge/zCloud.conf
+++ b/File/Surge/zCloud.conf
@@ -58,6 +58,8 @@ Auto test Group = url-test,xiaohua,zaihua,tokyo 1,tokyo 2,tokyo 3,tokyo 4,tokyo 
 ^.+cntv.cn/nettv/adp/online/adlist_ios.js _reject
 #Mybus
 ^.+\d{4}.mygolbs.com:\d{4}/imgs/\d{13}.png _reject
+#KaolaFM
+^.+img.kaolafm.net/mz/images/\d{6}/+/1080_1680.jpg _reject
 
 [Rule]
 #lemon
