--- a/File/Shadowrocket/zCloud_Global.conf
+++ b/File/Shadowrocket/zCloud_Global.conf
@@ -60,6 +60,8 @@ newloc.map.n.shifen.com = ::
 ^.+cntv.cn/nettv/adp/online/adlistios.js reject
 #Mybus
 ^.+\d{4}.mygolbs.com:\d{4}/imgs/\d{13}.png reject
+#KaolaFM
+^.+img.kaolafm.net/mz/images/\d{6}/+/1080_1680.jpg reject
 
 [Rule]
 #lemon
