--- a/File/Shadowrocket/zCloud_Global.conf
+++ b/File/Shadowrocket/zCloud_Global.conf
@@ -62,57 +62,20 @@ newloc.map.n.shifen.com = ::
 ^.+\d{4}.mygolbs.com:\d{4}/imgs/\d{13}.png reject
 #KaolaFM
 ^.+img.kaolafm.net/mz/images/\d{6}/+/1080_1680.jpg reject
+#autoimg
+^.+adm[0-3].autoimg.cn reject
+#it168
+^.+[*168|adshownew|stat|fund|eq].it168.com reject
+
+DOMAIN,stat.it168.com,REJECT
+DOMAIN,.10jqka.com.cn,REJECT
+DOMAIN,stat.10jqka.com.cn,REJECT
+DOMAIN,fund.10jqka.com.cn,REJECT
+DOMAIN,eq.10jqka.com.cn,REJECT
+DOMAIN,ozone.10jqka.com.cn,REJECT
+DOMAIN,vaserviece.10jqka.com.cn,REJECT
 
 [Rule]
-#lemon
-DOMAIN-SUFFIX,adapi.starschina.com,REJECT
-#youku
-DOMAIN,ad.mobile.youku.com,REJECT
-DOMAIN,ad.api.3g.youku.com,REJECT
-#iqy_qzdx
-IP-CIDR,112.17.1.75/32,REJECT,no-resolve
-IP-CIDR,112.17.1.76/32,REJECT,no-resolve
-IP-CIDR,112.17.1.193/32,REJECT,no-resolve
-IP-CIDR,112.17.1.194/32,REJECT,no-resolve
-IP-CIDR,112.17.1.195/32,REJECT,no-resolve
-IP-CIDR,112.17.1.196/32,REJECT,no-resolve
-#iqy_xmyd
-IP-CIDR,183.250.178.84/32,REJECT,no-resolve
-IP-CIDR,183.250.178.85/32,REJECT,no-resolve
-IP-CIDR,183.250.178.86/32,REJECT,no-resolve
-#hunantv
-DOMAIN,x.da.hunantv.com,REJECT
-DOMAIN,y.da.hunantv.com,REJECT
-#qq
-DOMAIN,lives.l.qq.com,REJECT
-DOMAIN,omgmta.qq.com,REJECT
-DOMAIN,pingjs.qq.com,REJECT
-DOMAIN,pingma.qq.com,REJECT
-DOMAIN,tajs.qq.com,REJECT
-DOMAIN,tcss.qq.com,REJECT
-DOMAIN,qqvideo.tc.qq.com,REJECT
-DOMAIN,mi.gdt.qq.com,REJECT
-DOMAIN,v.gdt.qq.com,REJECT
-DOMAIN,cm.l.qq.com,REJECT
-DOMAIN,btrace.video.qq.com,REJECT
-DOMAIN,rcgi.video.qq.com,REJECT
-DOMAIN-SUFFIX,beacon.qq.com,REJECT
-DOMAIN-SUFFIX,pingtcss.qq.com,REJECT
-DOMAIN-SUFFIX,report.qq.com,REJECT
-#sina weibo
-DOMAIN,adshxgc.ut.taobao.com,REJECT
-DOMAIN,biz.weibo.com,REJECT
-DOMAIN,s.alitui.weibo.com,REJECT
-DOMAIN,zymo.mps.weibo.com,REJECT
-DOMAIN,game.weibo.cn,REJECT
-DOMAIN,gw5.push.mcp.weibo.cn,REJECT
-DOMAIN,m.game.weibo.cn,REJECT
-DOMAIN-SUFFIX,gw5.push.mcp.weibo.cn,REJECT
-DOMAIN-SUFFIX,u1.img.mobile.sina.cn,REJECT
-DOMAIN-SUFFIX,beacon.sina.com.cn,REJECT
-#sohu
-DOMAIN,mmg.aty.sohu.com,REJECT
-DOMAIN-SUFFIX,aty.sohu.com,REJECT
 #youtube by lhie1
 DOMAIN-SUFFIX,ehg-youtube.hitbox.com,REJECT
 DOMAIN-SUFFIX,gcdn.2mdn.net,REJECT
@@ -131,6 +94,124 @@ DOMAIN-SUFFIX,m-78.jp,REJECT
 DOMAIN-SUFFIX,nichibenren.or.jp,REJECT
 DOMAIN-SUFFIX,nicorette.co.kr,REJECT
 DOMAIN-SUFFIX,shizen-no-megumi.com,REJECT
+#youku
+DOMAIN,ad.mobile.youku.com,REJECT
+DOMAIN,ad.api.3g.youku.com,REJECT
+DOMAIN,hz.youku.com,REJECT
+DOMAIN,stat.youku.com,REJECT
+DOMAIN,e.stat.ykimg.com,REJECT
+DOMAIN,p-log.ykimg.com,REJECT
+DOMAIN,v.l.youku.com,REJECT
+DOMAIN,ykatr.youku.com,REJECT
+DOMAIN,hudong.pl.youku.com,REJECT
+DOMAIN,msg.youku.com,REJECT
+DOMAIN,p.l.youku.com,REJECT
+DOMAIN-SUFFIX,atm.youku.com,REJECT
+#lemon
+DOMAIN-SUFFIX,adapi.starschina.com,REJECT
+#iqiyi
+DOMAIN,msg.video.qiyi.com,REJECT
+DOMAIN,msg2.video.qiyi.com,REJECT
+DOMAIN,msg.71.am,REJECT
+DOMAIN,meta.video.qiyi.com,REJECT
+DOMAIN,data.video.qiyi.com,REJECT
+DOMAIN,api.cupid.iqiyi.com,REJECT
+DOMAIN,paopao.iqiyi.com,REJECT
+DOMAIN-SUFFIX,afp.qiyi.com,REJECT
+DOMAIN-SUFFIX,ckm.iqiyi.com,REJECT
+DOMAIN-SUFFIX,cupid.iqiyi.com,REJECT
+#iqy_qzdx
+IP-CIDR,112.17.1.75/32,REJECT,no-resolve
+IP-CIDR,112.17.1.76/32,REJECT,no-resolve
+IP-CIDR,112.17.1.193/32,REJECT,no-resolve
+IP-CIDR,112.17.1.194/32,REJECT,no-resolve
+IP-CIDR,112.17.1.195/32,REJECT,no-resolve
+IP-CIDR,112.17.1.196/32,REJECT,no-resolve
+#iqy_xmyd
+IP-CIDR,183.250.178.84/32,REJECT,no-resolve
+IP-CIDR,183.250.178.85/32,REJECT,no-resolve
+IP-CIDR,183.250.178.86/32,REJECT,no-resolve
+#hunantv
+DOMAIN,x.da.hunantv.com,REJECT
+DOMAIN,y.da.hunantv.com,REJECT
+#pptv
+DOMAIN-SUFFIX,de.as.pptv.com,REJECT
+DOMAIN-SUFFIX,jp.as.pptv.com,REJECT
+#qq
+DOMAIN,lives.l.qq.com,REJECT
+DOMAIN,omgmta.qq.com,REJECT
+DOMAIN,pingjs.qq.com,REJECT
+DOMAIN,pingma.qq.com,REJECT
+DOMAIN,tajs.qq.com,REJECT
+DOMAIN,tcss.qq.com,REJECT
+DOMAIN,qqvideo.tc.qq.com,REJECT
+DOMAIN,mi.gdt.qq.com,REJECT
+DOMAIN,v.gdt.qq.com,REJECT
+DOMAIN,cm.l.qq.com,REJECT
+DOMAIN,btrace.video.qq.com,REJECT
+DOMAIN,rcgi.video.qq.com,REJECT
+DOMAIN-SUFFIX,beacon.qq.com,REJECT
+DOMAIN-SUFFIX,pingtcss.qq.com,REJECT
+DOMAIN-SUFFIX,report.qq.com,REJECT
+DOMAIN,cm.l.qq.com,REJECT
+DOMAIN,btrace.video.qq.com,REJECT
+DOMAIN,rcgi.video.qq.com,REJECT
+#sina weibo
+DOMAIN,adshxgc.ut.taobao.com,REJECT
+DOMAIN,biz.weibo.com,REJECT
+DOMAIN,s.alitui.weibo.com,REJECT
+DOMAIN,zymo.mps.weibo.com,REJECT
+DOMAIN,game.weibo.cn,REJECT
+DOMAIN,gw5.push.mcp.weibo.cn,REJECT
+DOMAIN,m.game.weibo.cn,REJECT
+DOMAIN-SUFFIX,u1.img.mobile.sina.cn,REJECT
+DOMAIN-SUFFIX,beacon.sina.com.cn,REJECT
+#sohu
+DOMAIN,mmg.aty.sohu.com,REJECT
+DOMAIN-SUFFIX,aty.sohu.com,REJECT
+#tudou
+DOMAIN,ad.api.3g.tudou.com,REJECT
+DOMAIN,adcontrol.tudou.com,REJECT
+DOMAIN,adplay.tudou.com,REJECT
+DOMAIN,stat.tudou.com,REJECT
+DOMAIN,stats.tudou.com,REJECT
+#baidu
+DOMAIN,cbjs.baidu.com,REJECT
+DOMAIN,cpro.baidu.com,REJECT
+DOMAIN,eclick.baidu.com,REJECT
+DOMAIN,entry.baidu.com,REJECT
+DOMAIN,hm.baidu.com,REJECT
+DOMAIN,hmma.baidu.com,REJECT
+DOMAIN,mobads-logs.baidu.com,REJECT
+DOMAIN,mobads.baidu.com,REJECT
+DOMAIN,mtj.baidu.com,REJECT
+DOMAIN,nsclick.baidu.com,REJECT
+DOMAIN,spcode.baidu.com,REJECT
+DOMAIN,static.tieba.baidu.com,REJECT
+DOMAIN,ucstat.baidu.com,REJECT
+DOMAIN,union.baidu.com,REJECT
+DOMAIN,imageplus.baidu.com,REJECT
+DOMAIN-SUFFIX,baidustatic.com,REJECT
+DOMAIN-SUFFIX,pos.baidu.com,REJECT
+DOMAIN-SUFFIX,baichuan.baidu.com,REJECT
+DOMAIN-SUFFIX,tuisong.baidu.com,REJECT
+#google
+DOMAIN,static.googleadsserving.cn,REJECT
+DOMAIN,ads.google.com,REJECT
+DOMAIN,afd.l.google.com,REJECT
+DOMAIN,mobileads.google.com,REJECT
+DOMAIN,pagead-tpc.l.google.com,REJECT
+DOMAIN,pagead.google.com,REJECT
+DOMAIN,pagead.l.google.com,REJECT
+DOMAIN,partnerad.l.google.com,REJECT
+DOMAIN,ads.youtube.com,REJECT
+DOMAIN,ads.gmodules.com,REJECT
+DOMAIN,badad.googleplex.com,REJECT
+DOMAIN,www.googlecommerce.com,REJECT
+DOMAIN,www.googletagmanager.com,REJECT
+DOMAIN-SUFFIX,googleadservices.com,REJECT
+DOMAIN-SUFFIX,googletagservices.com,REJECT
+DOMAIN-SUFFIX,googleads.g.doubleclick.net,REJECT
 #dns pollution
 DOMAIN,accounts.google.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,appspot.com,Proxy,force-remote-dns
@@ -176,21 +257,6 @@ DOMAIN,api.tapstream.com,REJECT
 DOMAIN,api.adform.com,REJECT
 DOMAIN,e.apsalar.com,REJECT
 DOMAIN,syndication.streamads.yahoo.com,REJECT
-DOMAIN,ad.api.3g.youku.com,REJECT
-DOMAIN,hz.youku.com,REJECT
-DOMAIN,stat.youku.com,REJECT
-DOMAIN,e.stat.ykimg.com,REJECT
-DOMAIN,p-log.ykimg.com,REJECT
-DOMAIN,v.l.youku.com,REJECT
-DOMAIN,ykatr.youku.com,REJECT
-DOMAIN,hudong.pl.youku.com,REJECT
-DOMAIN,msg.youku.com,REJECT
-DOMAIN,p.l.youku.com,REJECT
-DOMAIN,ad.api.3g.tudou.com,REJECT
-DOMAIN,adcontrol.tudou.com,REJECT
-DOMAIN,adplay.tudou.com,REJECT
-DOMAIN,stat.tudou.com,REJECT
-DOMAIN,stats.tudou.com,REJECT
 DOMAIN,acjs.aliyun.com,REJECT
 DOMAIN,adash.m.taobao.com,REJECT
 DOMAIN,pindao.huoban.taobao.com,REJECT
@@ -225,12 +291,6 @@ DOMAIN,xiuxiu.android.dl.meitu.com,REJECT
 DOMAIN,xiuxiu.mobile.meitudata.com,REJECT
 DOMAIN,a.koudai.com,REJECT
 DOMAIN,push.mobile.meituan.com,REJECT
-DOMAIN,lives.l.qq.com,REJECT
-DOMAIN,omgmta.qq.com,REJECT
-DOMAIN,pingjs.qq.com,REJECT
-DOMAIN,pingma.qq.com,REJECT
-DOMAIN,tajs.qq.com,REJECT
-DOMAIN,tcss.qq.com,REJECT
 DOMAIN,dsp.youdao.com,REJECT
 DOMAIN,g.163.com,REJECT
 DOMAIN,g1.163.com,REJECT
@@ -263,28 +323,6 @@ DOMAIN,e.domob.com.cn,REJECT
 DOMAIN,e.domob.cn,REJECT
 DOMAIN,sm.domobcdn.com,REJECT
 DOMAIN,erebor.douban.com,REJECT
-DOMAIN,msg.video.qiyi.com,REJECT
-DOMAIN,msg2.video.qiyi.com,REJECT
-DOMAIN,msg.71.am,REJECT
-DOMAIN,meta.video.qiyi.com,REJECT
-DOMAIN,data.video.qiyi.com,REJECT
-DOMAIN,api.cupid.iqiyi.com,REJECT
-DOMAIN,paopao.iqiyi.com,REJECT
-DOMAIN,cbjs.baidu.com,REJECT
-DOMAIN,cpro.baidu.com,REJECT
-DOMAIN,eclick.baidu.com,REJECT
-DOMAIN,entry.baidu.com,REJECT
-DOMAIN,hm.baidu.com,REJECT
-DOMAIN,hmma.baidu.com,REJECT
-DOMAIN,mobads-logs.baidu.com,REJECT
-DOMAIN,mobads.baidu.com,REJECT
-DOMAIN,mtj.baidu.com,REJECT
-DOMAIN,nsclick.baidu.com,REJECT
-DOMAIN,spcode.baidu.com,REJECT
-DOMAIN,static.tieba.baidu.com,REJECT
-DOMAIN,ucstat.baidu.com,REJECT
-DOMAIN,union.baidu.com,REJECT
-DOMAIN,imageplus.baidu.com,REJECT
 DOMAIN,res.limei.com,REJECT
 DOMAIN,res.cocounion.com,REJECT
 DOMAIN,ads.ookla.com,REJECT
@@ -296,36 +334,12 @@ DOMAIN,gma.alicdn.com,REJECT
 DOMAIN,ads.wasu.tv,REJECT
 DOMAIN,afp.wasu.cn,REJECT
 DOMAIN,afpcreative.wasu.cn,REJECT
-DOMAIN,biz.weibo.com,REJECT
-DOMAIN,s.alitui.weibo.com,REJECT
-DOMAIN,zymo.mps.weibo.com,REJECT
-DOMAIN,game.weibo.cn,REJECT
-DOMAIN,gw5.push.mcp.weibo.cn,REJECT
-DOMAIN,m.game.weibo.cn,REJECT
-DOMAIN,mi.gdt.qq.com,REJECT
 DOMAIN,bj.imp.voiceads.cn,REJECT
 DOMAIN,m.madthumbs.com,REJECT
-DOMAIN,adm0.autoimg.cn,REJECT
-DOMAIN,adm1.autoimg.cn,REJECT
-DOMAIN,adm2.autoimg.cn,REJECT
-DOMAIN,adm3.autoimg.cn,REJECT
 DOMAIN,33.autohome.com.cn,REJECT
 DOMAIN,c.autohome.com.cn,REJECT
 DOMAIN,pcd.autohome.com.cn,REJECT
 DOMAIN,csi.gstatic.com,REJECT
-DOMAIN,static.googleadsserving.cn,REJECT
-DOMAIN,ads.google.com,REJECT
-DOMAIN,afd.l.google.com,REJECT
-DOMAIN,mobileads.google.com,REJECT
-DOMAIN,pagead-tpc.l.google.com,REJECT
-DOMAIN,pagead.google.com,REJECT
-DOMAIN,pagead.l.google.com,REJECT
-DOMAIN,partnerad.l.google.com,REJECT
-DOMAIN,ads.youtube.com,REJECT
-DOMAIN,ads.gmodules.com,REJECT
-DOMAIN,badad.googleplex.com,REJECT
-DOMAIN,www.googlecommerce.com,REJECT
-DOMAIN,www.googletagmanager.com,REJECT
 DOMAIN,service.urchin.com,REJECT
 DOMAIN,ad.csdn.net,REJECT
 DOMAIN,ads.csdn.net,REJECT
@@ -334,16 +348,6 @@ DOMAIN,img.ads.csdn.net,REJECT
 DOMAIN,csdnim.qtmojo.com,REJECT
 DOMAIN,ad.dedecms.com,REJECT
 DOMAIN,stat.dedecms.com,REJECT
-DOMAIN,168.it168.com,REJECT
-DOMAIN,adshownew.it168.com,REJECT
-DOMAIN,g.168.it168.com,REJECT
-DOMAIN,stat.it168.com,REJECT
-DOMAIN,adm.10jqka.com.cn,REJECT
-DOMAIN,stat.10jqka.com.cn,REJECT
-DOMAIN,fund.10jqka.com.cn,REJECT
-DOMAIN,eq.10jqka.com.cn,REJECT
-DOMAIN,ozone.10jqka.com.cn,REJECT
-DOMAIN,vaserviece.10jqka.com.cn,REJECT
 DOMAIN,d.dropbox.com,REJECT
 DOMAIN,dl-debug.dropbox.com,REJECT
 DOMAIN,syndication.twitter.com,REJECT
@@ -357,7 +361,6 @@ DOMAIN,api.instabug.com,REJECT
 DOMAIN,adlog.flurry.com,REJECT
 DOMAIN,ads.flurry.com,REJECT
 DOMAIN,fonts.googleapis.com,REJECT
-DOMAIN,v.gdt.qq.com,REJECT
 DOMAIN,sd.domob.cn,REJECT
 DOMAIN,pub.funshion.com,REJECT
 DOMAIN,adm.funshion.com,REJECT
@@ -383,16 +386,8 @@ DOMAIN,navi.gd.chinamobile.com,REJECT
 DOMAIN,144.dragonparking.com,REJECT
 DOMAIN,track.dragonparking.com,REJECT
 DOMAIN,cdn.dragonstatic.com,REJECT
-DOMAIN,sddnserror2.wo.com.cn,REJECT
-DOMAIN,sddnserror3.wo.com.cn,REJECT
-DOMAIN,sddnserror4.wo.com.cn,REJECT
-DOMAIN,sddnserror7.wo.com.cn,REJECT
-DOMAIN,sddnserror9.wo.com.cn,REJECT
 DOMAIN,daohang.114so.cn,REJECT
 DOMAIN,www.114so.cn,REJECT
-DOMAIN,cm.l.qq.com,REJECT
-DOMAIN,btrace.video.qq.com,REJECT
-DOMAIN,rcgi.video.qq.com,REJECT
 DOMAIN,adjust.com,REJECT
 DOMAIN,adjust.io,REJECT
 DOMAIN,pd.dopa.com.cn,REJECT
@@ -480,38 +475,18 @@ DOMAIN-SUFFIX,zhiziyun.com,REJECT
 DOMAIN-SUFFIX,segment.com,REJECT
 DOMAIN-SUFFIX,admaster.com.cn,REJECT
 DOMAIN-SUFFIX,amazon-adsystem.com,REJECT
-DOMAIN-SUFFIX,atm.youku.com,REJECT
 DOMAIN-SUFFIX,simaba.taobao.com,REJECT
-DOMAIN-SUFFIX,cupid.iqiyi.com,REJECT
-DOMAIN-SUFFIX,afp.qiyi.com,REJECT
-DOMAIN-SUFFIX,ckm.iqiyi.com,REJECT
-DOMAIN-SUFFIX,de.as.pptv.com,REJECT
-DOMAIN-SUFFIX,jp.as.pptv.com,REJECT
 DOMAIN-SUFFIX,ht55.cn,REJECT
-DOMAIN-SUFFIX,aty.sohu.com,REJECT
 DOMAIN-SUFFIX,statcounter.com,REJECT
-DOMAIN-SUFFIX,beacon.qq.com,REJECT
-DOMAIN-SUFFIX,pingtcss.qq.com,REJECT
-DOMAIN-SUFFIX,report.qq.com,REJECT
 DOMAIN-SUFFIX,union.youdao.com,REJECT
 DOMAIN-SUFFIX,kukuplay.com,REJECT
 DOMAIN-SUFFIX,fastapi.net,REJECT
 DOMAIN-SUFFIX,beep-bc.yahoo.com,REJECT
-DOMAIN-SUFFIX,baidustatic.com,REJECT
-DOMAIN-SUFFIX,pos.baidu.com,REJECT
-DOMAIN-SUFFIX,baichuan.baidu.com,REJECT
-DOMAIN-SUFFIX,tuisong.baidu.com,REJECT
 DOMAIN-SUFFIX,g.uusee.com,REJECT
 DOMAIN-SUFFIX,traffic.uusee.com,REJECT
 DOMAIN-SUFFIX,static.g.ppstream.com,REJECT
-DOMAIN-SUFFIX,gw5.push.mcp.weibo.cn,REJECT
-DOMAIN-SUFFIX,u1.img.mobile.sina.cn,REJECT
-DOMAIN-SUFFIX,beacon.sina.com.cn,REJECT
 DOMAIN-SUFFIX,2mdn.net,REJECT
 DOMAIN-SUFFIX,doubleclick.net,REJECT
-DOMAIN-SUFFIX,googleadservices.com,REJECT
-DOMAIN-SUFFIX,googletagservices.com,REJECT
-DOMAIN-SUFFIX,googleads.g.doubleclick.net,REJECT
 DOMAIN-SUFFIX,ad.doubleclick.net,REJECT
 DOMAIN-SUFFIX,files.adform.net,REJECT
 DOMAIN-SUFFIX,secure-ds.serving-sys.com,REJECT
