--- a/File/Shadowrocket/zCloud_Global.conf
+++ b/File/Shadowrocket/zCloud_Global.conf
@@ -65,15 +65,7 @@ newloc.map.n.shifen.com = ::
 #autoimg
 ^.+adm[0-3].autoimg.cn reject
 #it168
-^.+[*168|adshownew|stat|fund|eq].it168.com reject
-
-DOMAIN,stat.it168.com,REJECT
-DOMAIN,.10jqka.com.cn,REJECT
-DOMAIN,stat.10jqka.com.cn,REJECT
-DOMAIN,fund.10jqka.com.cn,REJECT
-DOMAIN,eq.10jqka.com.cn,REJECT
-DOMAIN,ozone.10jqka.com.cn,REJECT
-DOMAIN,vaserviece.10jqka.com.cn,REJECT
+^.+[*168|adshownew|stat|fund|eq|ozone|vaserviece].it168.com* reject
 
 [Rule]
 #youtube by lhie1
