--- a/File/Shadowrocket/zCloud_Global.conf
+++ b/File/Shadowrocket/zCloud_Global.conf
@@ -23,6 +23,7 @@ newloc.map.n.shifen.com = ::
 [URL Rewrite]
 #163
 ^.+p[3|4].music.126.net/+/\d.jpg?res=\d{8} reject
+^.+p[3|4].music.126.net/+/\d.jpg?param=750y292 reject
 ^.+img1.126.net/channel8/.+ reject
 #youku by lhie1
 ^.+api.appsdk.soku.com/[bg|tag]/r reject
