--- a/File/Surge/zCloud.conf
+++ b/File/Surge/zCloud.conf
@@ -1,7 +1,5 @@
 #!MANAGED-CONFIG https://raw.githubusercontent.com/Brywmzl/Conf/master/File/Surge/zCloud.conf interval=86400 strict=true
 [Proxy]
-xiaohua=custom,64.137.194.217,53195,chacha20,5201314,http://abclite.cn/SSEncrypt.module
-zaihua=custom,47.91.159.153,2333,chacha20,zaihua2,http://abclite.cn/SSEncrypt.module
 tokyo 1=custom,153.125.235.147,31134,rc4-md5,zCloud,http://abclite.cn/SSEncrypt.module
 tokyo 2=custom,153.125.232.142,31633,rc4-md5,zCloud,http://abclite.cn/SSEncrypt.module
 tokyo 3=custom,153.125.232.179,31044,rc4-md5,zCloud,http://abclite.cn/SSEncrypt.module
@@ -16,19 +14,22 @@ tokyo 10=custom,153.125.238.179,31116,rc4-md5,zCloud,http://abclite.cn/SSEncrypt
 [Proxy Group]
 Proxy = select,Proxy Group, DIRECT
 Proxy Group = select,Auto test Group,xiaohua,zaihua,tokyo 1,tokyo 2,tokyo 3,tokyo 4,tokyo 5,tokyo 6,tokyo 7,tokyo 8,tokyo 9,tokyo 10
-Auto test Group = url-test,xiaohua,zaihua,tokyo 1,tokyo 2,tokyo 3,tokyo 4,tokyo 5,tokyo 6,tokyo 7,tokyo 8,tokyo 9,tokyo 10,url = http://www.gstatic.com/generate_204
+Auto test Group = url-test,tokyo 1,tokyo 2,tokyo 3,tokyo 4,tokyo 5,tokyo 6,tokyo 7,tokyo 8,tokyo 9,tokyo 10,url = http://www.gstatic.com/generate_204
 
 [URL Rewrite]
-#Youku by lhie1
+#163
+^.+p[3|4].music.126.net/+/\d.jpg?res=\d{8} _reject
+^.+img1.126.net/channel8/.+ _reject
+#youku by lhie1
 ^.+api.appsdk.soku.com/[bg|tag]/r _reject
 ^.+api.mobile.youku.com/adv/ _reject
 ^.+api.mobile.youku.com/layout/search/hot/word _reject
-^.+d.m6.cms.mobile.youku.com/player/domain_name? http://burpsuite.applinzi.com/Request/ header
+^.+d.m6.cms.mobile.youku.com/player/domainname? http://burpsuite.applinzi.com/Request/ header
 ^.+hd.api.mobile.youku.com/common/v3/hudong/new _reject
 ^.+hd.mobile.youku.com/common/v3/hudong/new _reject
 ^.+i-play.mobile.youku.com/common/v5/play? http://burpsuite.applinzi.com/Request/ header
 ^.+m.youku.com/video/libs/iwt.js _reject
-^.+r.l.youku.com/rec_at_click _reject
+^.+r.l.youku.com/recatclick _reject
 #youku
 ^.+api.mobile.youku.com/adv/* _reject
 ^.+home.mobile.youku.com/laout/* _reject
@@ -38,117 +39,270 @@ Auto test Group = url-test,xiaohua,zaihua,tokyo 1,tokyo 2,tokyo 3,tokyo 4,tokyo 
 ^.+www.lianbijr.com/adPage/* _reject
 #iqiyi
 ^.+iface.iqiyi.com/api/getNewAdInfo* _reject
-^.+pic?\d{1}.qiyipic.com/common/?\d{8}/?([a-z0-9]{32}).[jpg|gif] _reject
+^.+pic?\d{1}.qiyipic.com/common/?\d{8}/?([a-z0-9]{32}).jpg _reject
 #sohu
 ^.+photocdn.sohu.com/tvmobilemvms/* _reject
 #sina
 ^.+dp.im.weibo.cn/entrance _reject
-^.+wbapp.mobile.sina.cn/wbapplua/* _reject
 ^.+sdkapp.mobile.sina.cn/interface/sdk/[sdkad|actionad].php _reject
 ^.+sdkapp.mobile.sina.cn/interface/sdk/actionad.php _reject
-^.+u?\d{1}.img.mobile.sina.cn/public/files/image/750x120_img* _reject
+^.+u?\d{1}.img.mobile.sina.cn/public/files/image/750x120img* _reject
+^.+wbapp.mobile.sina.cn/wbapplua/* _reject
 #lemon
 ^.+api.lemon95.com/V2/Media/Users/GetChannel* _reject
 ^.+tupian.lemon95.com:(\d{3,5})/Pictures/VediosAD/* _reject
-#163 music
-^.+p[3|4].music.126.net/+/\d.jpg?res=\d{8} _reject
-^.+img1.126.net/channel8/.+ _reject
-#Cbox
+#cbox
 ^.+p1.img.cctvpic.com/fmspic/pd/+ _reject
-^.+cntv.cn/nettv/adp/online/adlist_ios.js _reject
-#Mybus
+^.+cntv.cn/nettv/adp/online/adlistios.js _reject
+#mybus
 ^.+\d{4}.mygolbs.com:\d{4}/imgs/\d{13}.png _reject
-#KaolaFM
+#kaola fm
 ^.+img.kaolafm.net/mz/images/\d{6}/+/1080_1680.jpg _reject
+#autoimg
+^.+adm[0-3].autoimg.cn _reject
+#it168
+^.+[*168|adshownew|stat|fund|eq|ozone|vaserviece].it168.com* _reject
+#10jqka
+^.+[adm|stat|fund|eq|ozone|vaserviece].10jqka.com.cn* _reject
 
 [Rule]
-#lemon
-DOMAIN-SUFFIX,adapi.starschina.com,REJECT
-#youku
-DOMAIN,ad.mobile.youku.com,REJECT
-DOMAIN,ad.api.3g.youku.com,REJECT
-#iqiyi
-DOMAIN-SUFFIX,qiyi.com,DIRECT
-DOMAIN-SUFFIX,iqiyi.com,DIRECT
-#iqy_qzdx
-IP-CIDR,112.17.1.75/32,REJECT,no-resolve
-IP-CIDR,112.17.1.76/32,REJECT,no-resolve
-IP-CIDR,112.17.1.193/32,REJECT,no-resolve
-IP-CIDR,112.17.1.194/32,REJECT,no-resolve
-IP-CIDR,112.17.1.195/32,REJECT,no-resolve
-IP-CIDR,112.17.1.196/32,REJECT,no-resolve
-#iqy_xmyd
-IP-CIDR,183.250.178.84/32,REJECT,no-resolve
-IP-CIDR,183.250.178.85/32,REJECT,no-resolve
-IP-CIDR,183.250.178.86/32,REJECT,no-resolve
-#hunantv
-DOMAIN,x.da.hunantv.com,REJECT
-DOMAIN,y.da.hunantv.com,REJECT
-#qq
-DOMAIN,lives.l.qq.com,REJECT
-DOMAIN,omgmta.qq.com,REJECT
-DOMAIN,pingjs.qq.com,REJECT
-DOMAIN,pingma.qq.com,REJECT
-DOMAIN,tajs.qq.com,REJECT
-DOMAIN,tcss.qq.com,REJECT
-DOMAIN,qqvideo.tc.qq.com,REJECT
-DOMAIN,mi.gdt.qq.com,REJECT
-DOMAIN,v.gdt.qq.com,REJECT
-DOMAIN,cm.l.qq.com,REJECT
-DOMAIN,btrace.video.qq.com,REJECT
-DOMAIN,rcgi.video.qq.com,REJECT
-DOMAIN-SUFFIX,beacon.qq.com,REJECT
-DOMAIN-SUFFIX,pingtcss.qq.com,REJECT
-DOMAIN-SUFFIX,report.qq.com,REJECT
-#sina weibo
-DOMAIN,adshxgc.ut.taobao.com,REJECT
-DOMAIN,biz.weibo.com,REJECT
-DOMAIN,s.alitui.weibo.com,REJECT
-DOMAIN,zymo.mps.weibo.com,REJECT
-DOMAIN,game.weibo.cn,REJECT
-DOMAIN,gw5.push.mcp.weibo.cn,REJECT
-DOMAIN,m.game.weibo.cn,REJECT
-DOMAIN-SUFFIX,gw5.push.mcp.weibo.cn,REJECT
-DOMAIN-SUFFIX,u1.img.mobile.sina.cn,REJECT
-DOMAIN-SUFFIX,beacon.sina.com.cn,REJECT
-#sohu
-DOMAIN,mmg.aty.sohu.com,REJECT
-DOMAIN-SUFFIX,aty.sohu.com,REJECT
+#163
+DOMAIN,analytics.163.com,REJECT
+DOMAIN,g.163.com,REJECT
+DOMAIN,g1.163.com,REJECT
+DOMAIN,temp.163.com,REJECT
+DOMAIN-SUFFIX,163.com,DIRECT
 #youtube by lhie1
-DOMAIN-SUFFIX,ehg-youtube.hitbox.com,REJECT
-DOMAIN-SUFFIX,gcdn.2mdn.net,REJECT
-DOMAIN-SUFFIX,s.youtube.com,REJECT
-DOMAIN-SUFFIX,s2.youtube.com,REJECT
-DOMAIN-SUFFIX,ssl-youtube.2cnt.net,REJECT
-DOMAIN-SUFFIX,youtube.112.2o7.net,REJECT
-DOMAIN-SUFFIX,youtube.2cnt.net,REJECT
 DOMAIN-SUFFIX,ads.youtube.com,REJECT
 DOMAIN-SUFFIX,azabu-u.ac.jp,REJECT
 DOMAIN-SUFFIX,couchcoaster.jp,REJECT
 DOMAIN-SUFFIX,crt.comodoca.com,REJECT
 DOMAIN-SUFFIX,delivery.dmkt-sp.jp,REJECT
+DOMAIN-SUFFIX,ehg-youtube.hitbox.com,REJECT
 DOMAIN-SUFFIX,files.adform.net,REJECT
+DOMAIN-SUFFIX,gcdn.2mdn.net,REJECT
 DOMAIN-SUFFIX,m-78.jp,REJECT
 DOMAIN-SUFFIX,nichibenren.or.jp,REJECT
 DOMAIN-SUFFIX,nicorette.co.kr,REJECT
+DOMAIN-SUFFIX,s.youtube.com,REJECT
+DOMAIN-SUFFIX,s2.youtube.com,REJECT
 DOMAIN-SUFFIX,shizen-no-megumi.com,REJECT
-##
-DOMAIN-SUFFIX,apple.com,DIRECT
-DOMAIN-SUFFIX,cdn-apple.com,DIRECT
-DOMAIN-SUFFIX,mzstatic.com,DIRECT
-DOMAIN-SUFFIX,icloud.com,DIRECT
-DOMAIN-SUFFIX,me.com,DIRECT
+DOMAIN-SUFFIX,ssl-youtube.2cnt.net,REJECT
+DOMAIN-SUFFIX,youtube.112.2o7.net,REJECT
+DOMAIN-SUFFIX,youtube.2cnt.net,REJECT
+#youku
+DOMAIN,ad.api.3g.youku.com,REJECT
+DOMAIN,ad.mobile.youku.com,REJECT
+DOMAIN,e.stat.ykimg.com,REJECT
+DOMAIN,hudong.pl.youku.com,REJECT
+DOMAIN,hz.youku.com,REJECT
+DOMAIN,msg.youku.com,REJECT
+DOMAIN,p-log.ykimg.com,REJECT
+DOMAIN,p.l.youku.com,REJECT
+DOMAIN,stat.youku.com,REJECT
+DOMAIN,v.l.youku.com,REJECT
+DOMAIN,ykatr.youku.com,REJECT
+DOMAIN-SUFFIX,atm.youku.com,REJECT
+#lemon
+DOMAIN-SUFFIX,adapi.starschina.com,REJECT
+#iqiyi
+DOMAIN,api.cupid.iqiyi.com,REJECT
+DOMAIN,data.video.qiyi.com,REJECT
+DOMAIN,meta.video.qiyi.com,REJECT
+DOMAIN,msg.71.am,REJECT
+DOMAIN,msg.video.qiyi.com,REJECT
+DOMAIN,msg2.video.qiyi.com,REJECT
+DOMAIN,paopao.iqiyi.com,REJECT
+DOMAIN-SUFFIX,afp.qiyi.com,REJECT
+DOMAIN-SUFFIX,ckm.iqiyi.com,REJECT
+DOMAIN-SUFFIX,cupid.iqiyi.com,REJECT
+#iqy_qzdx
+IP-CIDR,112.17.1.193/32,REJECT,no-resolve
+IP-CIDR,112.17.1.194/32,REJECT,no-resolve
+IP-CIDR,112.17.1.195/32,REJECT,no-resolve
+IP-CIDR,112.17.1.196/32,REJECT,no-resolve
+IP-CIDR,112.17.1.75/32,REJECT,no-resolve
+IP-CIDR,112.17.1.76/32,REJECT,no-resolve
+#iqy_xmyd
+IP-CIDR,183.250.178.84/32,REJECT,no-resolve
+IP-CIDR,183.250.178.85/32,REJECT,no-resolve
+IP-CIDR,183.250.178.86/32,REJECT,no-resolve
+#hunantv
+DOMAIN,mp4.res.hunantv.com,REJECT
+DOMAIN,p2.hunantv.com,REJECT
+DOMAIN,x.da.hunantv.com,REJECT
+DOMAIN,y.da.hunantv.com,REJECT
+DOMAIN,x.da.hunantv.com,REJECT
+#pptv
+DOMAIN,asimgs.pplive.cn,REJECT
+DOMAIN-SUFFIX,de.as.pptv.com,REJECT
+DOMAIN-SUFFIX,jp.as.pptv.com,REJECT
+DOMAIN-SUFFIX,pplive.com,DIRECT
+DOMAIN-SUFFIX,pptv.com,DIRECT
+#pps
+DOMAIN-SUFFIX,pps.tv,DIRECT
+DOMAIN-SUFFIX,ppstream.com,DIRECT
+#ku6
+DOMAIN,static.ku6.com,REJECT
+DOMAIN,st.vq.ku6.cn,REJECT
+DOMAIN,pq.stat.ku6.com,REJECT
+DOMAIN,gug.ku6cdn.com,REJECT
+#qq
+DOMAIN,btrace.video.qq.com,REJECT
+DOMAIN,btrace.video.qq.com,REJECT
+DOMAIN,cm.l.qq.com,REJECT
+DOMAIN,cm.l.qq.com,REJECT
+DOMAIN,lives.l.qq.com,REJECT
+DOMAIN,mi.gdt.qq.com,REJECT
+DOMAIN,omgmta.qq.com,REJECT
+DOMAIN,pingjs.qq.com,REJECT
+DOMAIN,pingma.qq.com,REJECT
+DOMAIN,qqvideo.tc.qq.com,REJECT
+DOMAIN,rcgi.video.qq.com,REJECT
+DOMAIN,rcgi.video.qq.com,REJECT
+DOMAIN,tajs.qq.com,REJECT
+DOMAIN,tcss.qq.com,REJECT
+DOMAIN,v.gdt.qq.com,REJECT
+DOMAIN-SUFFIX,beacon.qq.com,REJECT
+DOMAIN-SUFFIX,pingtcss.qq.com,REJECT
+DOMAIN-SUFFIX,report.qq.com,REJECT
+#sina
+DOMAIN,biz.weibo.com,REJECT
+DOMAIN,game.weibo.cn,REJECT
+DOMAIN,gw5.push.mcp.weibo.cn,REJECT
+DOMAIN,m.game.weibo.cn,REJECT
+DOMAIN,s.alitui.weibo.com,REJECT
+DOMAIN,zymo.mps.weibo.com,REJECT
+DOMAIN-SUFFIX,beacon.sina.com.cn,REJECT
+DOMAIN-SUFFIX,u1.img.mobile.sina.cn,REJECT
+#sohu
+DOMAIN,mmg.aty.sohu.com,REJECT
+DOMAIN-SUFFIX,aty.sohu.com,REJECT
+#tudou
+DOMAIN,ad.api.3g.tudou.com,REJECT
+DOMAIN,adcontrol.tudou.com,REJECT
+DOMAIN,adplay.tudou.com,REJECT
+DOMAIN,stat.tudou.com,REJECT
+DOMAIN,stats.tudou.com,REJECT
+#letv
+DOMAIN,ark.letv.com,REJECT
+DOMAIN,dc.letv.com,REJECT
+DOMAIN,dev.dc.letv.com,REJECT
+DOMAIN,fz.letv.com,REJECT
+DOMAIN,letv.allyes.com,REJECT
+DOMAIN,n.mark.letv.com,REJECT
+DOMAIN,plog.dc.letv.com,REJECT
+DOMAIN,pro.hoye.letv.com,REJECT
+DOMAIN,pro.letv.com,REJECT
+DOMAIN,stat.letv.com,REJECT
+#youdao
+DOMAIN,dsp.youdao.com,REJECT
+DOMAIN-SUFFIX,union.youdao.com,REJECT
+#taobao
+DOMAIN,adash.m.taobao.com,REJECT
+DOMAIN,adshxgc.ut.taobao.com,REJECT
+DOMAIN,amdc.m.taobao.com,DIRECT
+DOMAIN,api.m.taobao.com,DIRECT
+DOMAIN,apoll.m.taobao.com,REJECT
+DOMAIN,h5.m.taobao.com,DIRECT
+DOMAIN,hydra.alibaba.com,REJECT
+DOMAIN,pindao.huoban.taobao.com,REJECT
+DOMAIN,rj.m.taobao.com,REJECT
+DOMAIN-SUFFIX,simaba.taobao.com,REJECT
+DOMAIN-SUFFIX,taobaocdn.com,DIRECT
+#aliyun
+DOMAIN,acjs.aliyun.com,REJECT
+DOMAIN,gma.alicdn.com,REJECT
+DOMAIN,mdap.alipaylog.com,DIRECT
+DOMAIN-SUFFIX,alicdn.com,DIRECT
+DOMAIN-SUFFIX,aliyun.com,DIRECT
+DOMAIN-SUFFIX,aliyuncdn.com,DIRECT
+DOMAIN-SUFFIX,aliyuncs.com,DIRECT
+#baidu
+DOMAIN,cbjs.baidu.com,REJECT
+DOMAIN,cpro.baidu.com,REJECT
+DOMAIN,eclick.baidu.com,REJECT
+DOMAIN,entry.baidu.com,REJECT
+DOMAIN,hm.baidu.com,REJECT
+DOMAIN,hmma.baidu.com,REJECT
+DOMAIN,imageplus.baidu.com,REJECT
+DOMAIN,mobads-logs.baidu.com,REJECT
+DOMAIN,mobads.baidu.com,REJECT
+DOMAIN,mtj.baidu.com,REJECT
+DOMAIN,nsclick.baidu.com,REJECT
+DOMAIN,spcode.baidu.com,REJECT
+DOMAIN,static.tieba.baidu.com,REJECT
+DOMAIN,ucstat.baidu.com,REJECT
+DOMAIN,union.baidu.com,REJECT
+DOMAIN-SUFFIX,baichuan.baidu.com,REJECT
+DOMAIN-SUFFIX,baidustatic.com,REJECT
+DOMAIN-SUFFIX,pos.baidu.com,REJECT
+DOMAIN-SUFFIX,tuisong.baidu.com,REJECT
+#google
+DOMAIN,accounts.google.com,Proxy,force-remote-dns
+DOMAIN,ads.gmodules.com,REJECT
+DOMAIN,ads.google.com,REJECT
+DOMAIN,ads.youtube.com,REJECT
+DOMAIN,afd.l.google.com,REJECT
+DOMAIN,badad.googleplex.com,REJECT
+DOMAIN,fonts.googleapis.com,REJECT
+DOMAIN,mobileads.google.com,REJECT
+DOMAIN,pagead-tpc.l.google.com,REJECT
+DOMAIN,pagead.google.com,REJECT
+DOMAIN,pagead.l.google.com,REJECT
+DOMAIN,partnerad.l.google.com,REJECT
+DOMAIN,static.googleadsserving.cn,REJECT
+DOMAIN,www.googlecommerce.com,REJECT
+DOMAIN,www.googletagmanager.com,REJECT
+DOMAIN-KEYWORD,google,Proxy,force-remote-dns
+DOMAIN-SUFFIX,googleads.g.doubleclick.net,REJECT
+DOMAIN-SUFFIX,googleadservices.com,REJECT
+DOMAIN-SUFFIX,googleapis.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,googletagservices.com,REJECT
+#apple
+DOMAIN,audio.itunes.apple.com,Proxy
+DOMAIN,beta.itunes.apple.com,Proxy
+DOMAIN,init.itunes.apple.com,Proxy
+DOMAIN,iosapps.itunes.apple.com,Proxy
 DOMAIN,se.itunes.apple.com,Proxy
 DOMAIN,sp.itunes.apple.com,Proxy
-DOMAIN,init.itunes.apple.com,Proxy
-DOMAIN,audio.itunes.apple.com,Proxy
-DOMAIN,iosapps.itunes.apple.com,Proxy
-DOMAIN-SUFFIX,swcdn.apple.com,Proxy
+DOMAIN-SUFFIX,1-apple.com.tw,Proxy
+DOMAIN-SUFFIX,apple.com,DIRECT
+DOMAIN-SUFFIX,cdn-apple.com,DIRECT
 DOMAIN-SUFFIX,itunes.apple.com,Proxy
-DOMAIN-SUFFIX,mzstatic.com,Proxy
 DOMAIN-SUFFIX,phobos.apple.com,Proxy
+DOMAIN-SUFFIX,swcdn.apple.com,Proxy
 DOMAIN-SUFFIX,trailers.apple.com,Proxy
-DOMAIN,beta.itunes.apple.com,Proxy
+DOMAIN-SUFFIX,itsliveradio.apple.com,Proxy
+#icoloud
+DOMAIN-SUFFIX,icloud.com,DIRECT
+#dns pollution
+DOMAIN-KEYWORD,aka,Proxy,force-remote-dns
+DOMAIN-KEYWORD,blogspot,Proxy,force-remote-dns
+DOMAIN-KEYWORD,dropbox,Proxy,force-remote-dns
+DOMAIN-KEYWORD,spotify,Proxy,force-remote-dns
+DOMAIN-KEYWORD,telegram,Proxy,force-remote-dns
+DOMAIN-SUFFIX,appspot.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,cdninstagram.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,facebook.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,fb.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,fb.me,Proxy,force-remote-dns
+DOMAIN-SUFFIX,fbcdn.net,Proxy,force-remote-dns
+DOMAIN-SUFFIX,gmail.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,instagram.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,scdn.co,Proxy,force-remote-dns
+DOMAIN-SUFFIX,t.co,Proxy,force-remote-dns
+DOMAIN-SUFFIX,twimg.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,twitpic.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,twitter.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,youtube-nocookie.com,Proxy
+DOMAIN-SUFFIX,youtube.com,Proxy,force-remote-dns
+##
+DOMAIN-KEYWORD,appledaily,Proxy,force-remote-dns
+DOMAIN-SUFFIX,appleactionews.com,Proxy
+DOMAIN-SUFFIX,mzstatic.com,DIRECT
+DOMAIN-SUFFIX,me.com,DIRECT
+DOMAIN-SUFFIX,mzstatic.com,Proxy
 DOMAIN,alexa.links.cn,REJECT
 DOMAIN,api.amplitude.com,REJECT
 DOMAIN,app.sysdigcloud.com,REJECT
@@ -168,32 +322,6 @@ DOMAIN,api.tapstream.com,REJECT
 DOMAIN,api.adform.com,REJECT
 DOMAIN,e.apsalar.com,REJECT
 DOMAIN,syndication.streamads.yahoo.com,REJECT
-DOMAIN,ad.api.3g.tudou.com,REJECT
-DOMAIN,adcontrol.tudou.com,REJECT
-DOMAIN,adplay.tudou.com,REJECT
-DOMAIN,stat.tudou.com,REJECT
-DOMAIN,stats.tudou.com,REJECT
-DOMAIN,acjs.aliyun.com,REJECT
-DOMAIN,adash.m.taobao.com,REJECT
-DOMAIN,pindao.huoban.taobao.com,REJECT
-DOMAIN,hydra.alibaba.com,REJECT
-DOMAIN,rj.m.taobao.com,REJECT
-DOMAIN,apoll.m.taobao.com,REJECT
-DOMAIN,ark.letv.com,REJECT
-DOMAIN,n.mark.letv.com,REJECT
-DOMAIN,stat.letv.com,REJECT
-DOMAIN,letv.allyes.com,REJECT
-DOMAIN,dc.letv.com,REJECT
-DOMAIN,fz.letv.com,REJECT
-DOMAIN,plog.dc.letv.com,REJECT
-DOMAIN,dev.dc.letv.com,REJECT
-DOMAIN,pro.letv.com,REJECT
-DOMAIN,pro.hoye.letv.com,REJECT
-DOMAIN,asimgs.pplive.cn,REJECT
-DOMAIN,gug.ku6cdn.com,REJECT
-DOMAIN,pq.stat.ku6.com,REJECT
-DOMAIN,st.vq.ku6.cn,REJECT
-DOMAIN,static.ku6.com,REJECT
 DOMAIN,static.diditaxi.com.cn,REJECT
 DOMAIN,data.vod.itc.cn,REJECT
 DOMAIN,imp.optaim.com,REJECT
@@ -207,10 +335,6 @@ DOMAIN,xiuxiu.mobile.meitudata.com,REJECT
 DOMAIN,a.koudai.com,REJECT
 DOMAIN,push.mobile.meituan.com,REJECT
 DOMAIN,dsp.youdao.com,REJECT
-DOMAIN,g.163.com,REJECT
-DOMAIN,g1.163.com,REJECT
-DOMAIN,temp.163.com,REJECT
-DOMAIN,analytics.163.com,REJECT
 DOMAIN,f1.p0y.cn,REJECT
 DOMAIN,f2.p0y.cn,REJECT
 DOMAIN,img1.126.net,REJECT
@@ -257,7 +381,6 @@ DOMAIN,ads.ookla.com,REJECT
 DOMAIN,cdn.ads.ookla.com,REJECT
 DOMAIN,union.m.jd.com,REJECT
 DOMAIN,ad.toutiao.com,REJECT
-DOMAIN,gma.alicdn.com,REJECT
 DOMAIN,ads.wasu.tv,REJECT
 DOMAIN,afp.wasu.cn,REJECT
 DOMAIN,afpcreative.wasu.cn,REJECT
@@ -292,16 +415,6 @@ DOMAIN,img.ads.csdn.net,REJECT
 DOMAIN,csdnim.qtmojo.com,REJECT
 DOMAIN,ad.dedecms.com,REJECT
 DOMAIN,stat.dedecms.com,REJECT
-DOMAIN,168.it168.com,REJECT
-DOMAIN,adshownew.it168.com,REJECT
-DOMAIN,g.168.it168.com,REJECT
-DOMAIN,stat.it168.com,REJECT
-DOMAIN,adm.10jqka.com.cn,REJECT
-DOMAIN,stat.10jqka.com.cn,REJECT
-DOMAIN,fund.10jqka.com.cn,REJECT
-DOMAIN,eq.10jqka.com.cn,REJECT
-DOMAIN,ozone.10jqka.com.cn,REJECT
-DOMAIN,vaserviece.10jqka.com.cn,REJECT
 DOMAIN,d.dropbox.com,REJECT
 DOMAIN,dl-debug.dropbox.com,REJECT
 DOMAIN,syndication.twitter.com,REJECT
@@ -435,9 +548,6 @@ DOMAIN-SUFFIX,zhiziyun.com,REJECT
 DOMAIN-SUFFIX,segment.com,REJECT
 DOMAIN-SUFFIX,admaster.com.cn,REJECT
 DOMAIN-SUFFIX,amazon-adsystem.com,REJECT
-DOMAIN-SUFFIX,simaba.taobao.com,REJECT
-DOMAIN-SUFFIX,de.as.pptv.com,REJECT
-DOMAIN-SUFFIX,jp.as.pptv.com,REJECT
 DOMAIN-SUFFIX,ht55.cn,REJECT
 DOMAIN-SUFFIX,statcounter.com,REJECT
 DOMAIN-SUFFIX,union.youdao.com,REJECT
@@ -468,10 +578,6 @@ DOMAIN-KEYWORD,openx,REJECT
 DOMAIN-KEYWORD,admob,REJECT
 DOMAIN-KEYWORD,qtmojo,REJECT
 DOMAIN,m.qiyipic.com,DIRECT
-DOMAIN,h5.m.taobao.com,DIRECT
-DOMAIN,api.m.taobao.com,DIRECT
-DOMAIN,amdc.m.taobao.com,DIRECT
-DOMAIN,mdap.alipaylog.com,DIRECT
 DOMAIN,images-cn.ssl-images-amazon.com,DIRECT
 DOMAIN,api.mixpanel.com,DIRECT
 DOMAIN,d2pur3iezf4d1j.cloudfront.net,DIRECT
@@ -489,12 +595,9 @@ DOMAIN,storage.live.com,DIRECT
 DOMAIN-SUFFIX,QuickConnect.to,DIRECT
 DOMAIN-SUFFIX,alipaylog.com,DIRECT
 DOMAIN-SUFFIX,alipayobjects.com,DIRECT
-DOMAIN-SUFFIX,taobaocdn.com,DIRECT
-DOMAIN-SUFFIX,alicdn.com,DIRECT
 DOMAIN-SUFFIX,12306.cn,DIRECT
 DOMAIN-SUFFIX,17app.co,DIRECT
 DOMAIN-SUFFIX,126.net,DIRECT
-DOMAIN-SUFFIX,163.com,DIRECT
 DOMAIN-SUFFIX,netnease.com,DIRECT
 DOMAIN-SUFFIX,360buyimg.com,DIRECT
 DOMAIN-SUFFIX,icbc.com,DIRECT
@@ -606,9 +709,6 @@ DOMAIN-SUFFIX,aliexpress.com,DIRECT
 DOMAIN-SUFFIX,aliimg.com,DIRECT
 DOMAIN-SUFFIX,alikunlun.com,DIRECT
 DOMAIN-SUFFIX,alisoft.com,DIRECT
-DOMAIN-SUFFIX,aliyun.com,DIRECT
-DOMAIN-SUFFIX,aliyuncdn.com,DIRECT
-DOMAIN-SUFFIX,aliyuncs.com,DIRECT
 DOMAIN-SUFFIX,anzhi.com,DIRECT
 DOMAIN-SUFFIX,appinn.com,DIRECT
 DOMAIN-SUFFIX,appsina.com,DIRECT
@@ -782,10 +882,6 @@ DOMAIN-SUFFIX,phoenixlzx.com,DIRECT
 DOMAIN-SUFFIX,phpwind.net,DIRECT
 DOMAIN-SUFFIX,pingan.com,DIRECT
 DOMAIN-SUFFIX,pool.ntp.org,DIRECT
-DOMAIN-SUFFIX,pplive.com,DIRECT
-DOMAIN-SUFFIX,pps.tv,DIRECT
-DOMAIN-SUFFIX,ppstream.com,DIRECT
-DOMAIN-SUFFIX,pptv.com,DIRECT
 DOMAIN-SUFFIX,pubyun.com,DIRECT
 DOMAIN-SUFFIX,qhimg.com,DIRECT
 DOMAIN-SUFFIX,qianlong.com,DIRECT
@@ -950,7 +1046,6 @@ DOMAIN-SUFFIX,com.hk,Proxy
 DOMAIN-SUFFIX,com.jp,Proxy
 DOMAIN-SUFFIX,0rz.tw,Proxy
 DOMAIN-SUFFIX,0to255.com,Proxy
-DOMAIN-SUFFIX,1-apple.com.tw,Proxy
 DOMAIN-SUFFIX,1024.inc.gs,Proxy
 DOMAIN-SUFFIX,10conditionsoflove.com,Proxy
 DOMAIN-SUFFIX,10musume.com,Proxy
@@ -1106,7 +1201,6 @@ DOMAIN-SUFFIX,apigee.com,Proxy
 DOMAIN-SUFFIX,app.box.com,Proxy
 DOMAIN-SUFFIX,app.heywire.com,Proxy
 DOMAIN-SUFFIX,app.hkatvnews.com,Proxy
-DOMAIN-SUFFIX,appleactionews.com,Proxy
 DOMAIN-SUFFIX,apps.hloli.net,Proxy
 DOMAIN-SUFFIX,appspot.com,Proxy
 DOMAIN-SUFFIX,aprs.net,Proxy
@@ -2248,7 +2342,7 @@ DOMAIN-SUFFIX,itaboo.info,Proxy
 DOMAIN-SUFFIX,ithelp.ithome.com.tw,Proxy
 DOMAIN-SUFFIX,its.caltech.edu,Proxy
 DOMAIN-SUFFIX,itshidden.com,Proxy
-DOMAIN-SUFFIX,itsliveradio.apple.com,Proxy
+
 DOMAIN-SUFFIX,itweet.net,Proxy
 DOMAIN-SUFFIX,iu45.com,Proxy
 DOMAIN-SUFFIX,iuhrdf.org,Proxy
@@ -4091,7 +4185,6 @@ DOMAIN-KEYWORD,popyard,Proxy,force-remote-dns
 DOMAIN-KEYWORD,raidcall,Proxy,force-remote-dns
 DOMAIN-KEYWORD,blogspot,Proxy,force-remote-dns
 DOMAIN-KEYWORD,akamaihd,Proxy,force-remote-dns
-DOMAIN-KEYWORD,google,Proxy,force-remote-dns
 DOMAIN-KEYWORD,facebook,Proxy,force-remote-dns
 DOMAIN-KEYWORD,youtube,Proxy,force-remote-dns
 DOMAIN-KEYWORD,twitter,Proxy,force-remote-dns
