--- a/File/Surge/zCloud.conf
+++ b/File/Surge/zCloud.conf
@@ -13,7 +13,7 @@ tokyo 10=custom,153.125.238.179,31116,rc4-md5,zCloud,http://abclite.cn/SSEncrypt
 
 [Proxy Group]
 Proxy = select,Proxy Group, DIRECT
-Proxy Group = select,Auto test Group,xiaohua,zaihua,tokyo 1,tokyo 2,tokyo 3,tokyo 4,tokyo 5,tokyo 6,tokyo 7,tokyo 8,tokyo 9,tokyo 10
+Proxy Group = select,Auto test Group,tokyo 1,tokyo 2,tokyo 3,tokyo 4,tokyo 5,tokyo 6,tokyo 7,tokyo 8,tokyo 9,tokyo 10
 Auto test Group = url-test,tokyo 1,tokyo 2,tokyo 3,tokyo 4,tokyo 5,tokyo 6,tokyo 7,tokyo 8,tokyo 9,tokyo 10,url = http://www.gstatic.com/generate_204
 
 [URL Rewrite]
